# Pong

./: .clang-format  .gitignore  CMakeLists.txt
src/: App.cpp  App.h  Ball.cpp  Ball.h  MiddleBar.cpp  MiddleBar.h  Pad.cpp  Pad.h  Score.cpp  Score.h  Trigger.cpp  Trigger.h  Wall.cpp  Wall.h  main.cpp
